hphp/hack/test/typecheck/references/strict_reference2.php.exp
File "strict_reference2.php", line 4, characters 14-15:
Collection element cannot be marked as reference (Parsing[1002])
