hphp/hack/test/typecheck/references/strict_reference2.php
<?hh // strict

function test(int $x): void {
  $y = array(&$x);
}
